--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <button type="button" class="btn btn-secondary btn-lg" id="replay" onclick="replayBtn()" data-i18n="again">AGAIN-I18N</button>
         <button type="button" class="btn btn-secondary btn-lg" onclick="window.location.reload()" data-i18n="home">HOME-I18N</button>
-        <button type="button" class="btn btn-secondary btn-lg" onclick="window.location.href='https://github.com/arcxingye/EatKano'" data-i18n="repo">REPO-I18N</button>
+        <button type="button" class="btn btn-secondary btn-lg" onclick="window.location.href='https://www.bilibili.com/video/BV1WS4y1J747?share_source=copy_web&vd_source=d21d0d583d32d92dda3ec632e7f4b3fd'" data-i18n="repo">REPO-I18N</button>
     </div>
 </div>
 </div>
